# open-coral

./: .gitignore  ARCHITECTURE.md  README.md  bunfig.toml  electron.vite.config.ts  package-lock.json  package.json  tsconfig.node.json
.github/workflows/: release.yml
bootstrap-node/: .dockerignore  Dockerfile  docker-compose.yml  index.ts  package.json  tsconfig.json
native/: CMakeLists.txt
native/patches/: apply-once.cmake
native/src/: block_forward.cpp  block_forward.h  coral_napi.cpp  llama_block_context.cpp  llama_block_context.h  model_context.cpp  model_context.h  vocab_context.cpp  vocab_context.h
scripts/: crypto-polyfill.ts
src/inference/: block-extractor.ts  block-runner.ts  coverage.ts  embedder.ts  gguf-parser.ts  gguf-partial.ts  hardware-detect.ts  native-loader.ts  native-tokenizer.ts  native-worker.ts  ngram-cache.ts  pipeline-scheduler.ts  runner-embedder.ts  sampler.ts  sequence-manager.ts  shard-utils.ts  speculative-session.ts  thinking-budget.ts  tokenizer.ts  types.ts
src/main/: api-config.ts  api-server-ipc.ts  api-server.ts  block-host.ts  chain-plan-cache.ts  chat-session-ipc.ts  chat-session-manager.ts  claude-settings.ts  huggingface.ts  identity.ts  index.ts  inference-orchestrator.ts  kv-session-registry.ts  model-manager.ts  session-store.ts
src/p2p/: block-registry.ts  dht.ts  discovered-models.ts  ed25519-helpers.ts  float16.ts  inference-protocol.ts  key-registry.ts  kv-chain.ts  kv-protocol.ts  model-announce.ts  network-inspector.ts  node.ts  peer-latency.ts  pipelined-kv-chain.ts  stream-utils.ts
src/preload/: index.ts
src/renderer/: index.html  tsconfig.json  tsconfig.tsbuildinfo
tests/inference/: block-extractor.test.ts  block-runner.test.ts  coverage.test.ts  embedder.test.ts  gguf-parser.test.ts  llama-block-context.test.ts  native-tokenizer-think.test.ts  (+13 more)
(+96 files in other folders)
